--- a/tools/config-loader/package.json
+++ b/tools/config-loader/package.json
@@ -13,6 +13,7 @@
     "clean": "rimraf lib .rush package-deps.json",
     "docs": "",
     "lint": "tslint --project . 1>&2",
+    "extract-api": "node ./node_modules/@bentley/build-tools/scripts/extract-api.js --entry=index",
     "test": "",
     "cover": ""
   },
