--- a/plugins/geo-photo/package.json
+++ b/plugins/geo-photo/package.json
@@ -81,6 +81,7 @@
     "@types/react": "^16.8.0",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
+    "null-loader": "^0.1.1",
     "rimraf": "^2.6.2",
     "tsconfig-paths": "^3.3.2",
     "tslint": "^5.11.0",
@@ -88,6 +89,7 @@
     "typescript": "~3.6.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.0",
+    "source-map-loader": "^0.2.3",
     "svg-baker-runtime": "^1.4.2"
   },
   "dependencies": {
