Update to @bentley/imodeljs-native 1.10.0

--- a/core/backend/package.json
+++ b/core/backend/package.json
@@ -72,28 +72,28 @@
     "@types/fs-extra": "^4.0.7",
     "@types/glob": "^5.0.35",
     "@types/js-base64": "^2.3.1",
+    "@types/lru-cache": "^5.1.0",
     "@types/mocha": "^5.2.5",
+    "@types/multiparty": "^0.0.31",
     "@types/node": "10.14.1",
     "@types/semver": "^5.5.0",
-    "@types/multiparty": "^0.0.31",
-    "@types/lru-cache": "^5.1.0",
     "chai": "^4.1.2",
     "cpx": "^1.5.0",
+    "event-stream": "~4.0.1",
     "mocha": "^5.2.0",
+    "null-loader": "^0.1.1",
     "nyc": "^14.0.0",
     "rimraf": "^2.6.2",
+    "source-map-loader": "^0.2.3",
     "source-map-support": "^0.5.6",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-etc": "^1.5.2",
     "typescript": "~3.6.2",
-    "webpack": "^4.20.2",
-    "source-map-loader": "^0.2.3",
-    "null-loader": "^0.1.1",
-    "event-stream": "~4.0.1"
+    "webpack": "^4.20.2"
   },
   "dependencies": {
-    "@bentley/imodeljs-native": "1.9.5",
+    "@bentley/imodeljs-native": "1.10.0",
     "@azure/storage-blob": "10.4.0",
     "form-data": "^2.3.2",
     "fs-extra": "^6.0.1",
