--- a/core/ecschema-metadata/package.json
+++ b/core/ecschema-metadata/package.json
@@ -51,7 +51,8 @@
     "tslint": "^5.11.0",
     "tslint-etc": "^1.5.2",
     "typescript": "~3.6.2",
-    "xmldom": "^0.1.27"
+    "xmldom": "^0.1.27",
+    "xmlhttprequest": "^1.8.0"
   },
   "dependencies": {
     "glob": "^7.1.2",
