--- a/core/ecschema-metadata/package.json
+++ b/core/ecschema-metadata/package.json
@@ -37,7 +37,6 @@
     "@bentley/imodeljs-i18n": "2.0.0-dev.30",
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7",
-    "@types/glob": "^5.0.35",
     "@types/mocha": "^5.2.5",
     "@types/node": "10.14.1",
     "@types/sinon": "^7.5.1",
@@ -55,11 +54,7 @@
     "xmldom": "^0.1.27",
     "xmlhttprequest": "^1.8.0"
   },
-  "dependencies": {
-    "glob": "^7.1.2",
-    "bunyan": "^1.8.12",
-    "bunyan-seq": "^0.2.0"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "@bentley/bentleyjs-core": "^2.0.0-dev.30",
     "@bentley/imodeljs-i18n": "^2.0.0-dev.30"
