--- a/presentation/backend/package.json
+++ b/presentation/backend/package.json
@@ -60,7 +60,7 @@
     "@types/object-hash": "^1.3.0",
     "@types/sinon": "^7.5.1",
     "@types/sinon-chai": "^3.2.0",
-    "@typescript-eslint/parser": "^2.10.0",
+    "@typescript-eslint/parser": "2.22.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7",
     "chai-jest-snapshot": "^2.0.0",
