--- a/presentation/frontend/package.json
+++ b/presentation/frontend/package.json
@@ -90,7 +90,7 @@
     "@types/node": "10.14.1",
     "@types/sinon": "^7.5.1",
     "@types/sinon-chai": "^3.2.0",
-    "@typescript-eslint/parser": "^2.10.0",
+    "@typescript-eslint/parser": "2.22.0",
     "cross-env": "^5.1.4",
     "chai": "^4.1.2",
     "chai-as-promised": "^7",
