--- a/ui/ninezone/package.json
+++ b/ui/ninezone/package.json
@@ -92,7 +92,7 @@
     "@types/webpack": "^4.41.2",
     "@types/webpack-merge": "^4.1.5",
     "@types/webpack-dev-server": "^3.1.6",
-    "@typescript-eslint/parser": "^2.10.0",
+    "@typescript-eslint/parser": "2.22.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7",
     "chai-jest-snapshot": "^2.0.0",
