--- a/core/bentley/.npmignore
+++ b/core/bentley/.npmignore
@@ -1,7 +1,7 @@
 # start off ignoring everything, and then add back only the files we want
 *
 !lib/**/*.d.ts
+!lib/**/*.d.ts.map
 !lib/**/*.js
-!lib/module/dev/bentleyjs-core.js.map
 test
 !*.md
