--- a/core/logger-config/.npmignore
+++ b/core/logger-config/.npmignore
@@ -1,5 +1,6 @@
 # start off ignoring everything, and then add back only the files we want
 *
 !lib/**/*.d.ts
+!lib/**/*.d.ts.map
 !lib/**/*.js
 !*.md
