--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,7 @@
     "**/node_modules": true,
     "**/out": true,
     "**/lib": true,
-    "**/test-apps/build": true,
+    "**/test-apps/**/build": true,
     "common/temp": true,
     "tools/build/mocha-reporter": true,
     "tools/build/tslint-rules": true
