--- a/core/frontend/package.json
+++ b/core/frontend/package.json
@@ -7,8 +7,9 @@
   "imodeljsSharedLibrary": true,
   "license": "MIT",
   "scripts": {
-    "build": "npm run copy:assets && tsc 1>&2",
-    "copy:assets": "cpx \"./src/loader/checkbrowser.js\" ./lib/loader && cpx \"./src/public/**/*\" ./lib/public",
+    "build": "npm run copy:assets && npm run pseudolocalize && tsc 1>&2",
+    "copy:assets": "cpx ./src/loader/checkbrowser.js ./lib/loader && cpx \"./src/public/**/*\" ./lib/public",
+    "pseudolocalize": "betools pseudolocalize --englishDir ./src/public/locales/en --out ./lib/public/locales/en-PSEUDO",
     "clean": "rimraf lib .rush",
     "docs": "node ./node_modules/@bentley/build-tools/scripts/docs.js --includes=../../generated-docs/extract --json=../../generated-docs/core/imodeljs-frontend/file.json --tsIndexFile=./imodeljs-frontend.ts --onlyJson %TYPEDOC_THEME% --excludes=webgl/**/*,**/primitives --excludeGlob=**/*-css.ts",
     "extract-api": "node ./node_modules/@bentley/build-tools/scripts/extract-api.js --entry=imodeljs-frontend",
