Update react-scripts to dev.23 and add js.map files to npmignore
Added the flag USE_FULL_SOURCEMAP to the display-test-app which will use the production level source maps.

--- a/core/common/.npmignore
+++ b/core/common/.npmignore
@@ -1,8 +1,9 @@
 # start off ignoring everything, and then add back only the files we want
 *
 !lib/**/*.d.ts
+!lib/**/*.d.ts.map
 !lib/**/*.js
-!lib/module/dev/imodeljs-common.js.map
+!lib/**/*.js.map
 test
 !public/**
 !assets/**
