Update geo-photo to produce typescript output in addition to extension.  Fix tests
undefined

--- a/extensions/geo-photo/.npmignore
+++ b/extensions/geo-photo/.npmignore
@@ -1,6 +1,9 @@
 # start off ignoring everything, and then add back only the files we want
 *
-!lib/plugin/**
+!lib/extension/**
+!lib/extension/*.js
+!lib/**/*.js
+!lib/**/*.js.map
 assets/**
 test
 !*.md
