Extension service loader fixes
undefined

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -383,6 +383,10 @@
       "allowedCategories": [ "tools" ]
     },
     {
+      "name": "fast-sha256",
+      "allowedCategories": [ "tools" ]
+    },
+    {
       "name": "file-loader",
       "allowedCategories": [ "tools" ]
     },
