--- a/tools/extension-cli/package.json
+++ b/tools/extension-cli/package.json
@@ -36,6 +36,7 @@
     "@bentley/imodeljs-backend": "2.0.0-dev.64",
     "@bentley/imodeljs-common": "2.0.0-dev.64",
     "@bentley/imodeljs-clients": "2.0.0-dev.64",
+    "fast-sha256": "1.3.0",
     "electron": "^8.0.0",
     "tar": "^4.4.8",
     "yargs": "^15.0.0",
